feat: add syntax highlighting with Rouge and improve code blocks in snippets

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,10 @@ google_adsense: ca-pub-2246604857860574
 # Build settings
 markdown: kramdown
 highlighter: rouge
+kramdown:
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    css_class: 'highlight'
 permalink: /:categories/:title/
 
 # Plugins
