fix: resolve Jekyll build issues - fix Liquid syntax and exclude source files

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - vendor
+  - "snippets/**/*.sh"
+  - "snippets/**/Dockerfile"
+  - "snippets/**/*.py"
 
 # Collections
 # Jekyll collections는 기본적으로 _posts 폴더를 사용합니다
