refactor: move Google Analytics ID to config file

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ author:
 
 # Google Analytics
 google_tag_manager: GTM-TZJ28MRB
+google_analytics: G-TQH21TL0TZ
 
 # Google AdSense
 google_adsense: ca-pub-2246604857860574
